Update README and make composer.json consistent with it.

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         }
     },
     "scripts": {
-        "grumphp": "./vendor/bin/grumphp run"
+        "grumphp": "./vendor/bin/grumphp run",
+        "phpspec": "./vendor/bin/phpspec run"
     }
 }
