--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require": {
         "php": ">= 7.1.3",
-        "symfony/psr-http-message-bridge": "^1 || ^2"
+        "symfony/psr-http-message-bridge": "^1 || ^2",
+        "league/uri-query-parser": "^1.0"
     },
     "require-dev": {
         "drupol/php-conventions": "^1.7.1",
