--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">= 7.1.3",
-        "league/uri-components": "^2.2",
+        "league/uri-query-parser": "^1.0",
         "symfony/psr-http-message-bridge": "^1 || ^2"
     },
     "require-dev": {
