--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,13 @@
         "symfony/psr-http-message-bridge": "^1 || ^2"
     },
     "require-dev": {
-        "drupol/php-conventions": "^1.7.2 || ^1.8.6",
+        "drupol/php-conventions": "^1.7.2 || ^1.8.6 || ^2.0.2",
         "friends-of-phpspec/phpspec-code-coverage": "^4.3.2",
         "infection/infection": "^0.13.6 || ^0.15.3",
         "nyholm/psr7": "^1",
         "phpspec/phpspec": "^5.1.2 || ^6.2.1",
-        "symfony/http-kernel": "^4 || ^5 || ^5.1",
-        "vimeo/psalm": "^3.12"
+        "symfony/http-kernel": "^4 || ^5 || ^5.1.5",
+        "vimeo/psalm": "^3.18 || ^4"
     },
     "autoload": {
         "psr-4": {
