--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,7 +14,7 @@ jobs:
             fail-fast: false
             matrix:
                 operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-                php-versions: ['7.1', '7.2', '7.3', '7.4']
+                php-versions: ['7.4']
 
         steps:
             - name: Set git to use LF
@@ -31,7 +31,7 @@ jobs:
               uses: shivammathur/setup-php@master
               with:
                   php-version: ${{ matrix.php-versions }}
-                  extensions: xdebug,mbstring
+                  extensions: xdebug,mbstring,pcov
 
             - name: Get Composer Cache Directory
               id: composer-cache
@@ -48,9 +48,7 @@ jobs:
               run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
             - name: Run Grumphp
-              run: vendor/bin/grumphp run --no-ansi -n
-              env:
-                  STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
+              run: vendor/bin/grumphp run -n
 
             - name: Send PSALM data
               run: vendor/bin/psalm --shepherd --stats
