ci: Add Docker stack.

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
         }
     },
     "scripts": {
+        "changelog-unreleased": "docker-compose run auto_changelog -c .auto-changelog -u",
+        "changelog-version": "docker-compose run auto_changelog -c .auto-changelog -v",
         "grumphp": "./vendor/bin/grumphp run",
         "phpspec": "./vendor/bin/phpspec run"
     }
