--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,14 +1,15 @@
 imports:
-  - { resource: vendor/drupol/php-conventions/config/php71/grumphp.yml }
+    - { resource: vendor/drupol/php-conventions/config/php73/grumphp.yml }
 
 parameters:
-  extra_tasks:
-    psalm: ~
-    phpspec:
-      verbose: true
-    infection:
-      threads: 1
-      test_framework: phpspec
-      configuration: infection.json
-      min_msi: 50
-      min_covered_msi: 50
+    tasks.license.holder: Pol Dellaiera
+    tasks.license.date_from: 2020
+    extra_tasks:
+        phpspec:
+            verbose: true
+        infection:
+            threads: 1
+            test_framework: phpspec
+            configuration: infection.json
+            min_msi: 50
+            min_covered_msi: 50
