--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,18 @@
         }
     ],
     "require": {
-        "php": ">= 7.1.3",
+        "php": ">= 7.4",
         "league/uri-query-parser": "^1.0",
         "symfony/psr-http-message-bridge": "^1 || ^2"
     },
     "require-dev": {
-        "drupol/php-conventions": "^4.0.3",
+        "drupol/php-conventions": "^5",
         "friends-of-phpspec/phpspec-code-coverage": "^6",
-        "infection/infection": "^0.21.1",
+        "infection/infection": "^0.23",
         "infection/phpspec-adapter": "^0.1.1",
         "nyholm/psr7": "^1",
-        "phpspec/phpspec": "^7",
-        "symfony/http-kernel": "^5.1.6",
-        "vimeo/psalm": "^4"
+        "phpspec/phpspec": "^7.1",
+        "symfony/http-kernel": "^5.1.6"
     },
     "autoload": {
         "psr-4": {
