--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">= 7.3",
-        "league/uri-query-parser": "^1.0",
+        "league/uri-components": "^2.4",
         "loophp/psr-http-message-bridge-bundle": "^1.0"
     },
     "require-dev": {
